import org.gradle.internal.jvm.Jvm

apply plugin: 'java-library'

java {
    sourceCompatibility = JavaVersion.VERSION_1_8
    targetCompatibility = JavaVersion.VERSION_1_8
}

dependencies {

    annotationProcessor libraries.google.auto_service
    implementation libraries.google.auto_service_annotations
    implementation libraries.squareup.javapoet
    implementation libraries.android.gradle_plugin
    implementation project(':inject-annotation')

    if (!Jvm.current().getJavaVersion().java9Compatible) {
        compileOnly files(Jvm.current().getToolsJar())
    }
}